--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -39,7 +39,7 @@ a{
 
 body
 {
-    background: url("../image/f5.jpg");
+    background: url("../image/fondop.png");
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
