--- a/assets/css/registro.css
+++ b/assets/css/registro.css
@@ -1,6 +1,6 @@
 body
 {
-    background-image: url("../image/registro1.png");
+    background-image: url("../image/registro.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
@@ -49,7 +49,7 @@ h2
     margin:0px auto;
     font-size: 18px;
     font-family: Arial, Helvetica, sans-serif;
-    width: 450px;
+    width: 400px;
 }
 
 .form-group input:hover
